--- a/css/pic.css
+++ b/css/pic.css
@@ -4,7 +4,7 @@
 }
 body {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -16,8 +16,8 @@ li {
   list-style: none;
 }
 .box {
-  width: 200px;
-  height: 200px;
+  width: 2rem;
+  height: 2rem;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -30,91 +30,91 @@ li {
   animation: move 5s linear infinite;
 }
 .minbox {
-  width: 100px;
-  height: 100px;
+  width: 1rem;
+  height: 1rem;
   position: absolute;
-  left: 50px;
-  top: 30px;
+  left: 0.5rem;
+  top: 0.3rem;
   transform-style: preserve-3d;
 }
 .minbox li {
-  width: 100px;
-  height: 100px;
+  width: 1rem;
+  height: 1rem;
   position: absolute;
   left: 0;
   top: 0;
 }
 .minbox li:nth-child(1) {
   background: url("../img/1.jpg") no-repeat 0 0;
-  transform: translateZ(50px);
+  transform: translateZ(0.5rem);
   background-size: 100%;
 }
 .minbox li:nth-child(2) {
   background: url("../img/2.jpg") no-repeat 0 0;
-  transform: rotateY(180deg) translateZ(50px);
+  transform: rotateY(180deg) translateZ(0.5rem);
   background-size: 100%;
 }
 .minbox li:nth-child(3) {
   background: url("../img/3.jpg") no-repeat 0 0;
-  transform: rotateX(-90deg) translateZ(50px);
+  transform: rotateX(-90deg) translateZ(0.5rem);
   background-size: 100%;
 }
 .minbox li:nth-child(4) {
   background: url("../img/6.jpg") no-repeat 0 0;
-  transform: rotateX(90deg) translateZ(50px);
+  transform: rotateX(90deg) translateZ(0.5rem);
   background-size: 100%;
 }
 .minbox li:nth-child(5) {
   background: url("../img/5.jpg") no-repeat 0 0;
-  transform: rotateY(-90deg) translateZ(50px);
+  transform: rotateY(-90deg) translateZ(0.5rem);
   background-size: 100%;
 }
 .minbox li:nth-child(6) {
   background: url("../img/13.jpg") no-repeat 0 0;
-  transform: rotateY(90deg) translateZ(50px);
+  transform: rotateY(90deg) translateZ(0.5rem);
   background-size: 100%;
 }
 .maxbox li:nth-child(1) {
   background: url("../img/7.jpg") no-repeat 0 0;
-  transform: translateZ(50px);
+  transform: translateZ(0.5rem);
   background-size: 100%;
 }
 .maxbox li:nth-child(2) {
   background: url("../img/8.jpg") no-repeat 0 0;
-  transform: translateZ(50px);
+  transform: translateZ(0.5rem);
   background-size: 100%;
 }
 .maxbox li:nth-child(3) {
   background: url("../img/9.jpg") no-repeat 0 0;
-  transform: rotateX(90deg) translateZ(50px);
+  transform: rotateX(90deg) translateZ(0.5rem);
   background-size: 100%;
 }
 .maxbox li:nth-child(4) {
   background: url("../img/10.jpg") no-repeat 0 0;
-  transform: rotateX(-90deg) translateZ(50px);
+  transform: rotateX(-90deg) translateZ(0.5rem);
   background-size: 100%;
 }
 .maxbox li:nth-child(5) {
   background: url("../img/11.jpg") no-repeat 0 0;
-  transform: rotateY(90deg) translateZ(50px);
+  transform: rotateY(90deg) translateZ(0.5rem);
   background-size: 100%;
 }
 .maxbox li:nth-child(6) {
   background: url("../img/12.jpg") no-repeat 0 0;
-  transform: rotateY(-90deg) translateZ(50px);
+  transform: rotateY(-90deg) translateZ(0.5rem);
   background-size: 100%;
 }
 .maxbox {
-  width: 800px;
-  height: 400px;
+  width: 8rem;
+  height: 4rem;
   position: absolute;
   left: 0;
-  top: -20px;
+  top: -0.2rem;
   transform-style: preserve-3d;
 }
 .maxbox li {
-  width: 200px;
-  height: 200px;
+  width: 2rem;
+  height: 2rem;
   background-color: #fff;
   border: 1px solid #ccc;
   position: absolute;
@@ -124,70 +124,70 @@ li {
   transition: all 1s ease;
 }
 .maxbox li:nth-child(1) {
-  transform: translateZ(100px);
+  transform: translateZ(1rem);
 }
 .maxbox li:nth-child(2) {
-  transform: rotateY(180deg) translateZ(100px);
+  transform: rotateY(180deg) translateZ(1rem);
 }
 .maxbox li:nth-child(3) {
-  transform: rotateX(-90deg) translateZ(100px);
+  transform: rotateX(-90deg) translateZ(1rem);
 }
 .maxbox li:nth-child(4) {
-  transform: rotateX(90deg) translateZ(100px);
+  transform: rotateX(90deg) translateZ(1rem);
 }
 .maxbox li:nth-child(5) {
-  transform: rotateY(-90deg) translateZ(100px);
+  transform: rotateY(-90deg) translateZ(1rem);
 }
 .maxbox li:nth-child(6) {
-  transform: rotateY(90deg) translateZ(100px);
+  transform: rotateY(90deg) translateZ(1rem);
 }
 .box:hover ol li:nth-child(1) {
-  transform: translateZ(300px);
-  width: 400px;
-  height: 400px;
+  transform: translateZ(3rem);
+  width: 4rem;
+  height: 4rem;
   opacity: 0.8;
-  left: -100px;
-  top: -100px;
+  left: -1rem;
+  top: -1rem;
 }
 .box:hover ol li:nth-child(2) {
-  transform: rotateY(180deg) translateZ(300px);
-  width: 400px;
-  height: 400px;
+  transform: rotateY(180deg) translateZ(3rem);
+  width: 4rem;
+  height: 4rem;
   opacity: 0.8;
-  left: -100px;
-  top: -100px;
+  left: -1rem;
+  top: -1rem;
 }
 .box:hover ol li:nth-child(3) {
-  transform: rotateX(-90deg) translateZ(300px);
-  width: 400px;
-  height: 400px;
+  transform: rotateX(-90deg) translateZ(3rem);
+  width: 4rem;
+  height: 4rem;
   opacity: 0.8;
-  left: -100px;
-  top: -100px;
+  left: -1rem;
+  top: -1rem;
 }
 .box:hover ol li:nth-child(4) {
-  transform: rotateX(90deg) translateZ(300px);
-  width: 400px;
-  height: 400px;
+  transform: rotateX(90deg) translateZ(3rem);
+  width: 4rem;
+  height: 4rem;
   opacity: 0.8;
-  left: -100px;
-  top: -100px;
+  left: -1rem;
+  top: -1rem;
 }
 .box:hover ol li:nth-child(5) {
-  transform: rotateY(-90deg) translateZ(300px);
-  width: 400px;
-  height: 400px;
+  transform: rotateY(-90deg) translateZ(3rem);
+  width: 4rem;
+  height: 4rem;
   opacity: 0.8;
-  left: -100px;
-  top: -100px;
+  left: -1rem;
+  top: -1rem;
 }
 .box:hover ol li:nth-child(6) {
-  transform: rotateY(90deg) translateZ(300px);
-  width: 400px;
-  height: 400px;
+  transform: rotateY(90deg) translateZ(3rem);
+  width: 4rem;
+  height: 4rem;
   opacity: 0.8;
-  left: -100px;
-  top: -100px;
+  left: -1rem;
+  top: -1rem;
 }
 @keyframes move {
   0% {
