--- a/css/pic.css
+++ b/css/pic.css
@@ -11,6 +11,7 @@ body {
   background-size: 100% 100%;
   margin-left: auto;
   margin-right: auto;
+  padding-top: 2rem;
 }
 li {
   list-style: none;
